syntax = "proto3";
package proto.ci;

option go_package = "github.com/spinnaker/kleat/api/client/ci";

import "permissions.proto";

// Configuration for the Google Cloud Build Provider.
message GoogleCloudBuild {
  // Whether the Google Cloud Build provider is enabled.
  bool enabled = 1;

  // The list of configured Google Cloud Build accounts.
  repeated GoogleCloudBuildAccount accounts = 2;
}

// Configuration for a Google Cloud Build account.
message GoogleCloudBuildAccount {
  // The name of the account.
  string name = 1;

  // The name of the Google Cloud Platform project in which to trigger and monitor builds.
  string project = 2;

  // The name of the Pub/Sub subscription on which to listen for build changes.
  string subscriptionName = 3;

  // The path to a JSON service account that Spinnaker will use as
  // credentials. This is only needed if Spinnaker is not deployed on a
  // Google Compute Engine VM, or needs permissions not afforded to the VM
  // it is running on.
  string jsonKey = 4;

  // Fiat permissions configuration.
  Permissions permissions = 5;
}
