syntax = "proto3";
package proto.ci;

option go_package = "github.com/spinnaker/kleat/api/client/ci";

import "google/protobuf/wrappers.proto";

import "permissions.proto";

// Configuration to use Travis CI with Spinnaker, for continuous integration.
message Travis {
  // Whether Travis is enabled.
  google.protobuf.BoolValue enabled = 1;

  // The list of configured Travis accounts.
  repeated TravisAccount masters = 2;
}

// Configuration for a Travis account.
message TravisAccount {
  // The name of the account.
  string name = 1;

  // (Required) The URL at which to reach the Travis API (https://api.travis-ci.org).
  string address = 2;

  // (Required) The base URL at which to reach the Travis UI (https://travis-ci.org).
  string baseUrl = 3;

  // The GitHub token with which to authenticate against Travis.
  string githubToken = 4;

  // Fiat permissions configuration. A user must have at least one of the READ
  // roles in order to view this build account or use it as a trigger source.
  // A user must have at least one of the WRITE roles in order to run jobs on
  // this build account.
  Permissions permissions = 6;

  // The maximum number of jobs the Travis integration will retrieve per
  // polling cycle. Defaults to `100`.
  string numberOfJobs = 7;

  // The maximum number of builds Igor returns when querying for builds for a
  // specific repo. This determines, for example, how many builds are displayed
  // in the drop-down when a user starts a manual pipeline execution. If you
  // set this too high, the Travis API might return an error for jobs that
  // write many logs, so the default setting is only `10`.
  string buildResultLimit = 8;

  // The list of repositories that will be scraped. This is useful if your
  // organization uses many repositories and you want to speed things up by
  // scanning only a subset.
  repeated string filteredRepositories = 9;
}
